--- a/frontend/src/projects/app/components/login/login.component.html
+++ b/frontend/src/projects/app/components/login/login.component.html
@@ -4,7 +4,7 @@
       <mat-spinner color="primary" mode="indeterminate"> </mat-spinner>
     </div>
   } @else {
-    <form #authForm="ngForm" (ngSubmit)="login(authForm)">
+    <form #authForm="ngForm" (ngSubmit)="login(authForm)" class="font-display">
       <mat-form-field hideRequiredMarker>
         <mat-label>Email</mat-label>
         <input
