--- a/frontend/src/projects/app/components/submit-button/submit-button.component.html
+++ b/frontend/src/projects/app/components/submit-button/submit-button.component.html
@@ -8,7 +8,9 @@
     [attr.form]="form"
     class="text-lg w-full text-center relative submit-button"
   >
-    <span class="flex justify-center items-center gap-2">
+    <span
+      class="flex justify-center items-center gap-2 font-display dark:text-gray-300"
+    >
       @if (icon) {
         <mat-icon>{{ icon }}</mat-icon>
       }
