--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,26 +2,113 @@
 
 @use "tailwindcss";
 @use "./styles/table";
+@use "@angular/material" as mat;
+
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap");
 
 @theme {
-  // --color-primary: #0a54ff;
-  // --color-accent: #0fc3fa;
-  // --color-accent-700: #008ab8;
   --color-primary-50: #ebf1ff;
+  --color-primary-50-dark: #ebf1ff;
+  --color-primary-100: #d6e2ff;
+  --color-primary-100-dark: #ebf1ff;
+  --color-primary-200: #adc6ff;
+  --color-primary-200-dark: #ebf1ff;
+  --color-primary-300: #85a9ff;
+  --color-primary-300-dark: #ebf1ff;
+  --color-primary-400: #477eff;
+  --color-primary-400-dark: #d6e2ff;
   --color-primary: #0a54ff;
+  --color-primary-dark: #adc6ff;
+  --color-primary-600: #0043e0;
+  --color-primary-600-dark: #85a9ff;
+  --color-primary-700: #0037b8;
+  --color-primary-700-dark: #5c8dff;
+  --color-primary-800: #002b8f;
+  --color-primary-800-dark: #0a54ff;
+  --color-primary-900: #001f66;
+  --color-primary-900-dark: #0043e0;
+  --color-primary-950: #000f33;
+  --color-primary-950-dark: #002b8f;
+  --color-accent-50: #ebfaff;
+  --color-accent-50-dark: #ebfaff;
+  --color-accent-100: #d6f5ff;
+  --color-accent-100-dark: #ebfaff;
+  --color-accent-200: #adebff;
+  --color-accent-200-dark: #ebfaff;
+  --color-accent-300: #85e0ff;
+  --color-accent-300-dark: #d6f5ff;
+  --color-accent-400: #5cd6ff;
+  --color-accent-400-dark: #adebff;
   --color-accent: #0fc3fa;
-  --color-green-500: #2edc87;
+  --color-accent-dark: #85e0ff;
+  --color-accent-600: #00a8e0;
+  --color-accent-600-dark: #5cd6ff;
+  --color-accent-700: #008ab8;
+  --color-accent-700-dark: #0fc3fa;
+  --color-accent-800: #006b8f;
+  --color-accent-800-dark: #00a8e0;
+  --color-accent-900: #004d66;
+  --color-accent-900-dark: #008ab8;
+  --color-gray-50: #fafafa;
+  --color-gray-100: #f5f5f5;
+  --color-gray-200: #eeeeee;
+  --color-gray-300: #e0e0e0;
+  --color-gray-400: #bdbdbd;
+  --color-gray: #9e9e9e;
+  --color-gray-600: #757575;
+  --color-gray-700: #616161;
+  --color-gray-800: #424242;
+  --color-gray-900: #212121;
+  --color-gray-950: #141414;
+  --color-alert-50: #ffebeb;
+  --color-alert-100: #ffd6d6;
+  --color-alert-200: #ff9999;
+  --color-alert-300: #ff7070;
+  --color-alert-400: #ff3333;
   --color-alert: #ff0000;
+  --color-alert-600: #e00000;
+  --color-alert-700: #b80000;
+  --color-alert-800: #8f0000;
+  --color-alert-900: #660000;
+  --color-warning-50: #fffbec;
+  --color-warning-100: #fff6d9;
+  --color-warning-200: #ffe99f;
+  --color-warning-300: #ffe079;
+  --color-warning-400: #ffd752;
   --color-warning: #ffd23f;
+  --color-warning-600: #e6bd39;
+  --color-warning-700: #b3932c;
+  --color-warning-800: #665419;
+  --color-warning-900: #332a0d;
+  --color-green-50: #eefcf5;
+  --color-green-100: #dcf9eb;
+  --color-green-200: #b9f3d7;
+  --color-green-300: #96edc3;
+  --color-green-400: #62e4a5;
+  --color-green-500: #2edc87;
+  --color-green-600: #21c073;
+  --color-green-700: #1b9d5e;
+  --color-green-800: #157a49;
+  --color-green-900: #0f5734;
+  --font-display: "Montserrat", sans-serif;
 }
 
 html,
 body {
   height: 100%;
-}
-body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+// @todo
+@media (prefers-color-scheme: dark) {
+  body {
+    @include mat.theme(
+      (
+        color: mat.$blue-palette,
+        density: 0,
+      )
+    );
+  }
 }
 
 .register-dialog .mat-mdc-dialog-container {
