add wallet ui and some main page fixes

--- a/frontend/src/projects/app/components/column-container/column-container.component.html
+++ b/frontend/src/projects/app/components/column-container/column-container.component.html
@@ -21,7 +21,7 @@
               >keyboard_arrow_{{ isCollapsed ? "right" : "down" }}</mat-icon
             >
           </button>
-          <div>
+          <div class="!font-display">
             <h3 data-test="column-title">{{ title }}</h3>
             <p data-test="column-description">{{ subtitle }}</p>
           </div>
